--- a/node_bu/public/settings.html
+++ b/node_bu/public/settings.html
@@ -144,6 +144,12 @@
             </div>
         </div>
 
+        <!-- POV STATUS -->
+        <div class="ml-2 mr-5 text-white">
+            <strong class="">POV: </strong><span id="pov-value"></span>
+        </div>
+        <!-- END OF POV STATUS -->
+
         <!-- DARK MODE TOGGLE -->
         <div class="ml-2 mr-5">
             <div class="form-check form-switch">
@@ -189,8 +195,6 @@
     <!-- Footer -->
     <footer class="footer bg-dark text-white fixed-bottom">
         <div class="container text-center py-2">
-            <strong>POV: <span id="pov-value"></span></strong>
-            <br>
             <strong>&copy; 2024 Switchers.ai. All rights reserved.</strong>
         </div>
     </footer>
