--- a/node_bu/public/questions.html
+++ b/node_bu/public/questions.html
@@ -67,12 +67,14 @@
                     <i class="bi bi-clipboard-data text-success"></i>
                     Impacts
                 </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="icebergs-nav-btn"
-                        data-target="icebergs.html"
-                        data-toggle="tooltip" data-placement="bottom" title="Hazardous">
-                    <i class="bi bi-exclamation-triangle text-danger"></i>
-                    Hazardous
-                </button>
+                <div>
+                    <button type="button" class="btn btn-sm text-white m-1" id="icebergs-nav-btn"
+                            data-target="icebergs.html"
+                            data-toggle="tooltip" data-placement="bottom" title="Hazardous">
+                        <i class="bi bi-exclamation-triangle text-danger"></i>
+                        Hazardous
+                    </button>
+                </div>
             </div>
         </div>
 
