--- a/icebergs.html
+++ b/icebergs.html
@@ -6,9 +6,9 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <link href="images/icons/favicon.svg" rel="shortcut icon">
 
-    <title>Switchers.ai | Impacts</title>
+    <title>Switchers.ai | Hazardous</title>
 
-    <meta property="og:title" content="Switchers.ai | Impacts"/>
+    <meta property="og:title" content="Switchers.ai | Hazardous"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="https://app.switchers.ai/images/icons/favicon.svg"/>
 
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="css/main_view.css">
-    <link rel="stylesheet" href="css/outliers.css">
+    <link rel="stylesheet" href="css/icebergs.css">
 </head>
 
 <body class="body-background-dark">
@@ -53,14 +53,14 @@
                     <i class="bi bi-pie-chart"></i>
                     Questions
                 </button>
-                <button type="button" class="btn btn-sm bg-primary text-white m-1" id="impacts-nav-btn"
+                <button type="button" class="btn btn-sm text-white m-1" id="impacts-nav-btn"
                         data-target="outliers.html"
                         data-toggle="tooltip" data-placement="bottom" title="Impacts">
                     <i class="bi bi-clipboard-data text-success"></i>
                     Impacts
                 </button>
                 <div>
-                    <button type="button" class="btn btn-sm text-white m-1" id="icebergs-nav-btn"
+                    <button type="button" class="btn btn-sm bg-primary text-white m-1" id="icebergs-nav-btn"
                             data-target="icebergs.html"
                             data-toggle="tooltip" data-placement="bottom" title="Hazardous">
                         <i class="bi bi-exclamation-triangle text-danger"></i>
@@ -98,9 +98,9 @@
         <main>
             <div class="pt-2">
                 <div class="row mt-3 mb-2">
-                    <div id="questions-section" class="col-md-3 mb-2 col-sm-12">
+                    <div id="questions-section" class="col-md-3 mb-2 col-sm-12 mb-1">
                         <div id="additional-text-container" class="additional-text-container"></div>
-                        <div class="scrollable-container question-transition">
+                        <div id="questions-list-wrapper" class="scrollable-container question-transition">
                             <div class="list-group" id="questions-list">
                                 <!-- Clickable list items will be appended here dynamically -->
                             </div>
@@ -112,7 +112,7 @@
                             <div class="card bg-dark d-flex justify-content-center">
                                 <div class="row p-2 align-items-center">
                                     <div class="col-md-4 col-sm-4 col-xs-4">
-                                        <h3 class="text-white">Impacts Data</h3>
+                                        <h3 class="text-white">Hazardous Data</h3>
                                     </div>
                                     <div class="col-md-4 col-sm-4 col-xs-4 d-flex justify-content-end">
                                         <!-- Use flexbox to space out buttons -->
@@ -128,32 +128,37 @@
                                     </div>
                                     <div class="col-md-4 col-sm-4 col-xs-4 text-right">
                                         <!-- Chart Type Toggle -->
-                                        <div class="btn-group btn-group-toggle" id="chartTypeToggle" role="group" aria-label="Chart Type Toggle">
-                                            <button type="button" class="btn btn-sm" onclick="toggleChartType('ColumnChart')" title="Column Chart">
+                                        <div class="btn-group btn-group-toggle" id="chartTypeToggle" role="group"
+                                             aria-label="Chart Type Toggle">
+                                            <button type="button" class="btn btn-sm"
+                                                    onclick="toggleChartType('ColumnChart')" title="Column Chart">
                                                 <i class="bi bi-bar-chart-line"></i>
                                             </button>
-                                            <button type="button" class="btn btn-sm" onclick="toggleChartType('BarChart')" title="Bar Chart">
+                                            <button type="button" class="btn btn-sm"
+                                                    onclick="toggleChartType('BarChart')" title="Bar Chart">
                                                 <i class="bi bi-bar-chart-steps"></i>
                                             </button>
                                         </div>
 
                                         <!-- Stacked/Grouped Toggle -->
-<!--                                        <div class="btn-group btn-group-toggle ml-2" id="stackedGroupedToggle" role="group" aria-label="Stacked/Grouped Toggle">-->
-<!--                                            <button type="button" class="btn btn-sm" onclick="toggleStackMode(true)" title="Stacked">-->
-<!--                                                <i class="bi bi-stack"></i>-->
-<!--                                            </button>-->
-<!--                                            <button type="button" class="btn btn-sm" onclick="toggleStackMode(false)" title="Grouped">-->
-<!--                                                <i class="bi bi-layout-three-columns"></i>-->
-<!--                                            </button>-->
-<!--                                        </div>-->
+                                        <!--                                        <div class="btn-group btn-group-toggle ml-2" id="stackedGroupedToggle" role="group" aria-label="Stacked/Grouped Toggle">-->
+                                        <!--                                            <button type="button" class="btn btn-sm" onclick="toggleStackMode(true)" title="Stacked">-->
+                                        <!--                                                <i class="bi bi-stack"></i>-->
+                                        <!--                                            </button>-->
+                                        <!--                                            <button type="button" class="btn btn-sm" onclick="toggleStackMode(false)" title="Grouped">-->
+                                        <!--                                                <i class="bi bi-layout-three-columns"></i>-->
+                                        <!--                                            </button>-->
+                                        <!--                                        </div>-->
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="card mt-2">
-                            <div id="chart-div" style="width: auto; height: 70vh; display: flex; align-items: center; justify-content: center;">
+                            <div id="chart-div"
+                                 style="width: auto; height: 70vh; display: flex; align-items: center; justify-content: center;">
                                 <div style="text-align: center;">
-                                    <strong id="chart-placeholder" class="text-black">Choose a question to inspect.</strong>
+                                    <strong id="chart-placeholder" class="text-black">Choose a question to
+                                        inspect.</strong>
                                 </div>
                             </div>
                         </div>
@@ -192,6 +197,6 @@
 
 <script src="js/template.js" type="text/javascript"></script>
 <script src="js/googleChart.js" type="text/javascript"></script>
-<script src="js/outliers.js" type="text/javascript"></script>
+<script src="js/icebergs.js" type="text/javascript"></script>
 </body>
 </html>
