--- a/net.html
+++ b/net.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/main_view.css">
     <link rel="stylesheet" href="css/net.css">
 </head>
+
 <body class="body-background-dark">
 
 <div>
@@ -35,38 +36,45 @@
                 <button type="button" class="btn btn-sm text-white m-1" id="settings-nav-btn"
                         data-target="settings.html"
                         data-toggle="tooltip"
-                        data-placement="bottom" title="settings">
+                        data-placement="bottom" title="Settings">
                     <i class="bi bi-gear"></i>
                     Settings
                 </button>
                 <button type="button" class="btn btn-sm bg-primary text-white m-1" id="net-nav-btn"
                         data-target="net.html"
                         data-toggle="tooltip"
-                        data-placement="bottom" title="net">
+                        data-placement="bottom" title="Net">
                     <i class="bi bi-speedometer2"></i>
                     Net
                 </button>
                 <button type="button" class="btn btn-sm text-white m-1" id="questions-nav-btn"
                         data-target="questions.html"
-                        data-toggle="tooltip" data-placement="bottom" title="questions">
+                        data-toggle="tooltip" data-placement="bottom" title="Questions">
                     <i class="bi bi-pie-chart"></i>
                     Questions
                 </button>
                 <button type="button" class="btn btn-sm text-white m-1" id="impacts-nav-btn"
                         data-target="outliers.html"
-                        data-toggle="tooltip" data-placement="bottom" title="impacts">
-                    <i class="bi bi-clipboard-data"></i>
+                        data-toggle="tooltip" data-placement="bottom" title="Impacts">
+                    <i class="bi bi-clipboard-data text-success"></i>
                     Impacts
                 </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="icebergs-nav-btn"
-                        data-target="icebergs.html"
-                        data-toggle="tooltip" data-placement="bottom" title="icebergs">
-                    <i class="bi bi-exclamation-triangle text-danger"></i>
-                    Icebergs
-                </button>
+                <div>
+                    <button type="button" class="btn btn-sm text-white m-1" id="icebergs-nav-btn"
+                            data-target="icebergs.html"
+                            data-toggle="tooltip" data-placement="bottom" title="Hazardous">
+                        <i class="bi bi-exclamation-triangle text-danger"></i>
+                        Hazardous
+                    </button>
+                </div>
             </div>
         </div>
 
+        <!-- POV STATUS -->
+        <div class="ml-2 mr-5 text-white">
+            <strong class="">POV: </strong><span id="pov-value"></span>
+        </div>
+        <!-- END OF POV STATUS -->
 
         <!-- DARK MODE TOGGLE -->
         <div class="ml-2 mr-5">
@@ -90,21 +98,44 @@
         <main>
             <div class="pt-2">
                 <div class="row mt-3 mb-2">
-                    <div class="col-md-7 mb-2 col-sm-12 mb-1">
-                        <div class="card">
-                            <div class="chart-container" style="position: relative;">
-                                <canvas id="net-chart"></canvas>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-5 mb-2 col-sm-12 mb-1">
+                    <div id="net-section" class="col-md-5 mb-2 col-sm-12">
                         <div class="scrollable-container">
                             <div class="table-container">
                                 <table class="table table-bordered">
                                     <thead id="table-header"></thead>
                                     <tbody id="table-body"></tbody>
                                 </table>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="main-graph-data" class="col-md-7 mb-2 col-sm-12 mb-1">
+                        <div class="card">
+                            <div class="card bg-dark d-flex justify-content-center">
+                                <div class="row p-2 align-items-center">
+                                    <div class="col-md-4 col-sm-4 col-xs-4">
+                                        <h3 class="text-white">Net Data</h3>
+                                    </div>
+                                    <div class="col-md-4 col-sm-4 col-xs-4">
+                                    </div>
+                                    <div class="col-md-4 col-sm-4 col-xs-4 text-right">
+                                        <!-- Chart Type Toggle -->
+                                        <div class="btn-group btn-group-toggle" id="chartTypeToggle" role="group" aria-label="Chart Type Toggle">
+                                            <button type="button" class="btn btn-sm" onclick="toggleChartType('ColumnChart')" title="Column Chart">
+                                                <i class="bi bi-bar-chart-line"></i>
+                                            </button>
+                                            <button type="button" class="btn btn-sm" onclick="toggleChartType('BarChart')" title="Bar Chart">
+                                                <i class="bi bi-bar-chart-steps"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card mt-2">
+                            <div id="chart-div" style="width: auto; height: 70vh; display: flex; align-items: center; justify-content: center;">
+                                <div style="text-align: center;">
+                                    <strong id="chart-placeholder" class="text-black">Choose a question to inspect.</strong>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -116,18 +147,12 @@
     <!-- END OF MAIN VIEW-->
 
     <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-dark">
-                    <strong>&copy; 2024 Switchers.ai. All rights reserved.</strong>
-                </div>
-            </div>
+    <footer class="footer bg-dark text-white fixed-bottom">
+        <div class="container text-center py-2">
+            <strong>&copy; 2024 Switchers.ai. All rights reserved.</strong>
         </div>
     </footer>
     <!-- End of Footer -->
-
-    <div id="notificationBar" style="display: none;"></div>
 </div>
 
 <script crossorigin="anonymous" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
@@ -140,9 +165,14 @@
         type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
 <script src="js/template.js" type="text/javascript"></script>
+<script src="js/googleChart.js" type="text/javascript"></script>
 <script src="js/net.js" type="text/javascript"></script>
 </body>
 </html>
