--- a/node_bu/public/index.html
+++ b/node_bu/public/index.html
@@ -13,8 +13,7 @@
     <meta property="og:image" content="https://app.switchers.ai/images/icons/favicon.svg"/>
 </head>
 <body>
-<script>
-    window.location.replace("net");
-</script>
+<script src="https://unpkg.com/@descope/web-js-sdk@x.x.x/dist/index.umd.js"></script>
+<script src="js/auth.js" type="text/javascript"></script>
 </body>
 </html>
