narrow down number of "descopeProjectId" variable

--- a/node_bu/public/login.html
+++ b/node_bu/public/login.html
@@ -28,9 +28,7 @@
         <div class="col-md-8 col-lg-8">
             <div class="card bg-dark shadow-lg border-0">
                 <div class="card-body">
-                    <div id="container">
-                        <descope-wc project-id="P2em0AFZYHKGW50DjyAcu4Gdvhi0"
-                                    flow-id="sign-up-or-in-social-or-otp"></descope-wc>
+                    <div id="descope-login-container">
                     </div>
                 </div>
             </div>
