--- a/node_bu/public/icebergs.html
+++ b/node_bu/public/icebergs.html
@@ -171,6 +171,9 @@
                                         <button type="button" class="btn btn-secondary sensitivity-level-button"
                                                 data-level="low">Low
                                         </button>
+                                        <button type="button" class="btn btn-secondary sensitivity-level-button"
+                                                data-level="switchers">Switchers
+                                        </button>
                                     </div>
                                     <div class="col-md-4 col-sm-4 col-xs-4 text-right">
                                         <!-- Chart Type Toggle -->
