--- a/node_bu/public/net.html
+++ b/node_bu/public/net.html
@@ -39,6 +39,12 @@
                     <i class="bi bi-gear"></i>
                     Settings
                 </button>
+                <button type="button" class="btn btn-sm text-white m-1" id="filters-nav-btn"
+                        data-target="filters"
+                        data-toggle="tooltip" data-placement="bottom" title="Filters">
+                    <i class="bi bi-funnel"></i>
+                    Filters
+                </button>
                 <button type="button" class="btn btn-sm bg-primary text-white m-1" id="net-nav-btn"
                         data-target="net"
                         data-toggle="tooltip"
