add env file (public)

--- a/node_bu/public/outliers.html
+++ b/node_bu/public/outliers.html
@@ -263,9 +263,9 @@
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
+<script src="js/pub_env.js" type="text/javascript"></script>
 <script src="js/template.js" type="text/javascript"></script>
 <script src="js/auth.js" type="text/javascript"></script>
-
 <script src="js/googleChart.js" type="text/javascript"></script>
 <script src="js/outliers.js" type="text/javascript"></script>
 </body>
