--- a/node_bu/public/index.html
+++ b/node_bu/public/index.html
@@ -14,6 +14,8 @@
 </head>
 <body>
 <script src="https://unpkg.com/@descope/web-js-sdk@x.x.x/dist/index.umd.js"></script>
+
+<script src="js/pub_env.js" type="text/javascript"></script>
 <script src="js/auth.js" type="text/javascript"></script>
 </body>
 </html>
