--- a/node_bu/public/questions.html
+++ b/node_bu/public/questions.html
@@ -230,8 +230,6 @@
     <!-- End of Footer -->
 </div>
 <script src="https://unpkg.com/@descope/web-js-sdk@x.x.x/dist/index.umd.js"></script>
-<script src="js/auth.js" type="text/javascript"></script>
-
 <script crossorigin="anonymous" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
         type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
@@ -247,7 +245,9 @@
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
+<script src="js/pub_env.js" type="text/javascript"></script>
 <script src="js/template.js" type="text/javascript"></script>
+<script src="js/auth.js" type="text/javascript"></script>
 <script src="js/googleChart.js" type="text/javascript"></script>
 <script src="js/questions.js" type="text/javascript"></script>
 </body>
