--- a/node_bu/public/settings.html
+++ b/node_bu/public/settings.html
@@ -218,6 +218,7 @@
         type="text/javascript"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="js/pub_env.js" type="text/javascript"></script>
 <script src="js/template.js"></script>
 <script src="js/auth.js"></script>
 <script src="js/settings.js"></script>
